--- a/SoccerApp/app/src/main/res/layout/activity_main.xml
+++ b/SoccerApp/app/src/main/res/layout/activity_main.xml
@@ -130,7 +130,8 @@
             android:textColor="#FFF"
             android:textSize="16sp"
             android:onClick="clickRegister"
-            android:paddingBottom="20dp"/>
+            android:paddingBottom="20dp"
+            android:layout_marginTop="10dp"/>
 
     </RelativeLayout>
 </ScrollView>
